--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@hookform/resolvers": "^2.8.4",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.3",
     "@mui/styled-engine-sc": "^5.8.0",
@@ -15,9 +16,12 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.3.2",
+    "react-toastify": "^8.0.3",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,7 +38,9 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.1",
-    "@types/styled-components": "^5.1.16"
+    "@types/react-select": "^5.0.1",
+    "@types/styled-components": "^5.1.16",
+    "@types/yup": "^0.29.13"
   },
   "eslintConfig": {
     "extends": [
